--- a/generator_transformers.ipynb
+++ b/generator_transformers.ipynb
@@ -25,33 +25,11 @@
 			"metadata": {},
 			"outputs": [],
 			"source": [
-				"import os\n",
-				"import ast\n",
-				"import asyncio\n",
-				"import torch\n",
-				"import pandas as pd\n",
-				"from qdrant_client import AsyncQdrantClient, models\n",
-				"from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig\n",
-				"from tqdm.auto import tqdm\n",
-				"\n",
-				"print(f\"PyTorch: {torch.__version__}\")\n",
-				"print(f\"CUDA available: {torch.cuda.is_available()}\")\n",
-				"print(f\"GPU count: {torch.cuda.device_count()}\")\n",
-				"for i in range(torch.cuda.device_count()):\n",
-				"    print(f\"  GPU {i}: {torch.cuda.get_device_name(i)}\")"
-			]
-		},
-		{
-			"cell_type": "code",
-			"execution_count": null,
-			"metadata": {},
-			"outputs": [],
-			"source": [
 				"# ===== КОНФИГУРАЦИЯ =====\n",
-				"MODEL_NAME = \"Qwen/Qwen2.5-32B-Instruct\"\n",
+				"MODEL_NAME = \"Qwen/Qwen2.5-7B-Instruct\"\n",
 				"\n",
 				"# Настройки генерации\n",
-				"BATCH_SIZE = 8           # 8-16 для 32B на 2x5090\n",
+				"BATCH_SIZE = 16          # Можно больше для 7B модели\n",
 				"MAX_NEW_TOKENS = 200\n",
 				"TEMPERATURE = 0.1\n",
 				"\n",
